CZHDEV-0000: Added AEM div and adjust styles correspondingly and fix spacing issues on accordeons;

--- a/src/modules/accordion/accordion.scss
+++ b/src/modules/accordion/accordion.scss
@@ -1,6 +1,6 @@
 $accordionMap: (
   controlMargin: (
-    tiny: 12px,
+    zero: 12px,
     small: 14.5px,
     large: 17px,
   )
